.provarCaches/00D6C0000000xA6UAI/objects/PHSS_Custom_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Account_Owner_User_Name__c</fullName>
        <description>User name to be used when creating new accounts for B2C community users (when required).  Legacy name of this user is &apos;Salesforce Automation Account&apos;.</description>
        <label>Account Owner User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bucket_Account_Number_Suffix__c</fullName>
        <label>Bucket Account Number Suffix</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Claimed_Voucher_Status_Codes__c</fullName>
        <description>Separate values with semicolons</description>
        <label>Claimed Voucher Status Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Bucket_Account_ID__c</fullName>
        <label>Current Bucket Account ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>PHSS Custom Settings</label>
</CustomObject>